--- a/src/main/resources/templates/admin/editCategory.html
+++ b/src/main/resources/templates/admin/editCategory.html
@@ -69,7 +69,8 @@
                 </tr>
                 <tr class="submitTR">
                     <td colspan="2" align="center">
-                        <input type="hidden" name="id"   v-model.trim="bean.id" >
+                        <!--<input type="hidden" name="id"   v-model.trim="bean.id" >-->
+                        <input type="hidden" name="id" v-model.trim="bean.id">
                         <a href="#nowhere" class="btn btn-success" @click="update">提 交</a>
                     </td>
                 </tr>
