--- a/src/main/resources/templates/admin/listProductImage.html
+++ b/src/main/resources/templates/admin/listProductImage.html
@@ -48,7 +48,7 @@
                     if(!checkEmpty(this.singleFile,"单个图片产品")){
                         return;
                     }
-                    var url = "productImages" + "?type=single&pid=" + pid;
+                    var url = this.url + "?type=single&pid=" + pid;
                     var formData = new FormData();
                     formData.append("image",this.singleFile);
                     axios.post(url,formData).then(function (response) {
@@ -61,7 +61,7 @@
                     if(!checkEmpty(this.detailFile,"详情图片产品")){
                         return;
                     }
-                    var url = "productImages" + "?type=detail&pid=" + pid;
+                    var url = this.url + "?type=detail&pid=" + pid;
                     var formData = new FormData();
                     formData.append("image",this.detailFile);
                     axios.post(url,formData).then(function (response) {
@@ -135,7 +135,7 @@
                         <tr v-for="pi in singleProductImages">
                             <td>{{pi.id}}</td>
                             <td>
-                                <a title="点击查看原图" :href="'img/productSingle/'+pi.id+'.jpg'"><img height="50px" :src="'img/productSingle/'+pi.id+'.jpg'"></a>
+                                <a target="_blank" title="点击查看原图" :href="'img/productSingle/'+pi.id+'.jpg'"><img height="50px" :src="'img/productSingle/'+pi.id+'.jpg'"></a>
                             </td>
                             <td><a href="#nowhere" @click="deleteBean(pi.id)"><span class="glyphicon glyphicon-trash"></span></a></td>
 
