--- a/src/main/resources/templates/include/admin/adminPage.html
+++ b/src/main/resources/templates/include/admin/adminPage.html
@@ -1,5 +1,31 @@
 <div class="pageDiv" th:fragment="html">
 	<nav>
+		<!--<ul class="pagination">-->
+			<!--<li :class="{disabled:pagination.first}">-->
+				<!--<a href="#nowhere" @click="jump('first')">«</a>-->
+			<!--</li>-->
+
+			<!--<li :class="{disabled:!pagination.hasPrevious}">-->
+				<!--<a href="#nowhere" @click="jump('pre')">‹</a>-->
+			<!--</li>-->
+
+			<!--<li v-for="i in pagination.navigatepageNums">-->
+				<!--<a href="#nowhere" @click="jumpByNumber(i-1)">-->
+					<!--{{i}}-->
+				<!--</a>-->
+			<!--</li>-->
+
+
+			<!--<li :class="{disabled:!pagination.hasNext}">-->
+				<!--<a href="#nowhere" @click="jump('next')">›</a>-->
+			<!--</li>-->
+
+			<!--<li :class="{disabled:pagination.last}">-->
+				<!--<a href="#nowhere" @click="jump('last')">»</a>-->
+			<!--</li>-->
+
+
+		<!--</ul>-->
 		<ul class="pagination">
 			<li :class="{disabled:pagination.first}">
 				<a href="#nowhere" @click="jump('first')">«</a>
@@ -10,11 +36,8 @@
 			</li>
 
 			<li v-for="i in pagination.navigatepageNums">
-				<a href="#nowhere" @click="jumpByNumber(i-1)">
-					{{i}}
-				</a>
+				<a href="#nowhere" @click="jumpByNumber(i - 1)">{{i}}</a>
 			</li>
-
 
 			<li :class="{disabled:!pagination.hasNext}">
 				<a href="#nowhere" @click="jump('next')">›</a>
@@ -23,8 +46,6 @@
 			<li :class="{disabled:pagination.last}">
 				<a href="#nowhere" @click="jump('last')">»</a>
 			</li>
-
-
 		</ul>
 	</nav>
 </div>
