--- a/src/main/resources/templates/include/fore/search.html
+++ b/src/main/resources/templates/include/fore/search.html
@@ -11,8 +11,15 @@
 					<a th:href="@{'category?cid='+${c.id}}" th:text="${c.name}" ></a>
 					<span th:if="${status.index!=8}">|</span>
 	            </span>
-
             </div>
+
+            <!--<div class="searchBelow">-->
+                <!--<span th:each="c,status:${application.categories_below_search}" th:if="${status.index>=5 && status.index<=8}">-->
+                    <!--<a th:href="@{'category?cid='+${c.id}" th:text="${c.name}"></a>-->
+                    <!--<span th:if="${status.index!=8}"></span>-->
+                <!--</span>-->
+            <!--</div>-->
+
         </div>
     </form>
 </div>
